# rust-ctrlc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: async_example.rs  issue_46_example.rs  readme_example.rs
src/: error.rs  lib.rs
tests/main/: issue_97.rs  mod.rs
