[package]
authors = ["Antti Keränen <detegr@gmail.com>", "@ssrlive"]
name = "ctrlc2"
version = "3.5.6"
description = "Easy Ctrl-C handler version 2 for Rust projects"
documentation = "https://docs.rs/ctrlc2"
homepage = "https://github.com/ssrlive/ctrlc2"
keywords = ["ctrlc", "signal", "SIGINT"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = "https://github.com/ssrlive/ctrlc2.git"
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"
rust-version = "1.63.0"

[features]
termination = []
tokio = ["dep:tokio"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = [
    "fs",
    "signal",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Console",
] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[dependencies]
tokio = { version = "1.34", features = [
    "macros",
    "rt",
    "sync",
    "signal",
], optional = true }

[dev-dependencies]
signal-hook = "0.3"

[[test]]
harness = false
name = "main"
path = "tests/main/mod.rs"

[[test]]
harness = false
name = "issue_97"
path = "tests/main/issue_97.rs"

[badges]
maintenance = { status = "passively-maintained" }
